--- a/bookstore/src/main/resources/templates/new_account.html
+++ b/bookstore/src/main/resources/templates/new_account.html
@@ -291,6 +291,7 @@
                       <div class="v-text-align v-line-height" style="font-size: 14px; color: #333333; line-height: 160%; text-align: left; word-wrap: break-word;">
                         <p style="font-size: 14px; line-height: 160%;"><strong><span style="font-family: Raleway, sans-serif; font-size: 14px; line-height: 22.4px;">Cám ơn bạn đã là thành viên của BookStore! </span></strong></p>
                         <p style="font-size: 14px; line-height: 160%;"><span style="font-family: Raleway, sans-serif; font-size: 14px; line-height: 22.4px;">Tên đăng nhập của bạn là:  <span style="background-color: #bfedd2; line-height: 22.4px; color: #000000;"><em><strong><span th:text="${username}" style="font-size: 14px; line-height: 22.4px; background-color: #bfedd2;"></span></strong></em></span></span></p>
+                        <p style="font-size: 14px; line-height: 160%;"><span style="font-family: Raleway, sans-serif; font-size: 14px; line-height: 22.4px;">Mã kích hoạt của bạn là:  <span style="background-color: #bfedd2; line-height: 22.4px; color: #000000;"><em><strong><span th:text="${verificationCode}" style="font-size: 14px; line-height: 22.4px; background-color: #bfedd2;"></span></strong></em></span></span></p>
                       </div>
 
                     </td>
